fixed alignment for language menu

--- a/src/client/stylesheets/main.scss
+++ b/src/client/stylesheets/main.scss
@@ -373,3 +373,10 @@ text.recharts-text.recharts-cartesian-axis-tick-value {
     margin: 0 10px;
   }
 }
+.language-wrapper {
+  @media only screen and (max-width: 768px) {
+    ul {
+      margin-top: -30px !important;
+    }
+  }
+}
